syntax = "proto3";

package lightning.wire.lightningMessages.generated;

import "lightning/wire/types.proto";
import "lightning/wire/signature.proto";

message NodeAnnouncement {
  uint32 type = 1 [(bits) = 16];
  lightning.wire.Signature signature = 2;
  string features = 3 [(hex) = true];
  uint32 timestamp = 4;
  string node_id = 5 [(hex) = true, (length) = 33];
  uint32 node_rgb_color = 6 [(bits) = 24];
  string node_alias = 7 [(length) = 32];
  string addresses = 8 [(hex) = true];
}

message NodeAnnouncementWitness {
  string features = 1 [(hex) = true];
  uint32 timestamp = 2;
  string node_id = 3 [(hex) = true, (length) = 33];
  uint32 node_rgb_color = 4 [(bits) = 24];
  string node_alias = 5 [(length) = 32];
  string addresses = 6  [(hex) = true];
}

message Address {
  oneof address {
    IP4 ip4 = 1;
    IP6 ip6 = 2;
    Tor2 tor2 = 3;
    Tor3 tor3 = 4;
  }
}

message IP4 {
  string ipv4_addr = 1 [(length) = 4];
  uint32 port = 2 [(bits) = 16];
}

message IP6 {
  string ipv6_addr = 1 [(length) = 16];
  uint32 port = 2 [(bits) = 16];
}

message Tor2 {
  string onion_addr = 1 [(length) = 10];
  uint32 port = 2 [(bits) = 16];
}

message Tor3 {
  string onion_addr = 1 [(length) = 35];
  uint32 port = 2 [(bits) = 16];
}
